--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "14.1.0",
     "framer-motion": "^11.0.3",
     "postcss": "^8",
+    "react-intersection-observer": "^9.6.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
